fix: resolve About page UI layout bugs and update hero images

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -90,12 +90,17 @@
         background-color: #f8f9fa;
         margin-left: -50vw;
         margin-right: -50vw;
-        padding: 80px 50vw; // Full width background hack
+        padding: 80px 0;
         position: relative;
         left: 50%;
         right: 50%;
         width: 100vw;
     }
+}
+
+.innerContainer {
+    @include container;
+    padding: 0 20px;
 }
 
 .heading {
@@ -276,7 +281,7 @@
 }
 
 .statsSection {
-    background-image: url('@images/stats-bg-new.jpg');
+    background-image: url('@images/background-image-gaming-03.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
